--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">AppListProduct</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="inicio">Inicio</string>
-    <string name="favoritos">Favoritos</string>
+    <string name="inicio">Find Product</string>
+    <string name="favoritos">Favourite Product</string>
 </resources>
